# 7cardstud

./: .gitignore  7-card-stud-4-8-limit-study-notes.md  7-card-stud-session-01.md  README.md  play-poker.bat  play-poker.sh  pyproject.toml  render.yaml  run_poker.py  run_pyodide.py
.codex/: config.toml
pyodide/: build_info.js  index.html
scripts/: update_build_info.py
stud_sim/: __init__.py  agents.py  browser_api.py  build_info.py  cards.py  cli.py  evaluator.py  game.py  http_server.py  interactive.py  mcp_server.py  openai_agent.py
tests/: test_agents.py  test_evaluator.py  test_game.py  test_http_server.py
