[project]
name = "poker-stud-simulator"
version = "0.1.0"
description = "7-card stud simulator with pluggable local and OpenAI-backed opponents."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
stud-sim = "stud_sim.cli:main"
stud-sim-mcp = "stud_sim.mcp_server:main"
stud-sim-http = "stud_sim.http_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
